<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ItsMathTime</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="instructions">Instructions</string>
    <string name="score">Score</string>
    <string name="score_label">SCORE</string>
    <string name="time_label">TIME</string>
    <string name="level_label">LEVEL</string>
    <string name="date_label">DATE and TIME</string>
    <string name="image_desc">Image</string>
    <string name="equal_sign">=</string>
    <string name="answer_here_label">Answer Here</string>
    <string name="answer_toast">Input your Answer</string>
    <string name="answer_wrong">Wrong Answer.</string>
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> issue2
    
=======
    <string name="game_over_message">Game Over</string>
    <string name="ok">OK</string>
>>>>>>> issue2
=======
    <string name="game_over_message">Game Over</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="record">No Records Yet</string>
    <string name="tap">(Tap to answer)</string>
>>>>>>> issue4

</resources>
