<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainmenu"
    android:keepScreenOn="true"
    tools:context="com.jayar.project.itsmathtime.ItsMathTimeActivity" >

    <ImageButton
        android:id="@+id/start_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/start"
        android:src="@drawable/start" />

    <ImageButton
        android:id="@+id/score_table_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/score"
        android:src="@drawable/score" />

    <ImageButton
        android:id="@+id/instructions_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/score_table_button"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/instructions"
        android:src="@drawable/instruction" />

</RelativeLayout>
