<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamebg"
    android:gravity="center_horizontal"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#008000"
        android:gravity="center_horizontal"
        android:keepScreenOn="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/score_label"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/level_label"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:shadowColor="#000000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/date_label"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp" />

</LinearLayout>