<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamebg"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="#009DFE" >

        <TextView
            android:id="@+id/scorelabel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/score_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timelabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/time_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/levellabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/level_label"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rel1"
        android:layout_alignRight="@+id/rel1"
        android:layout_below="@+id/rel1"
        android:background="#000000" >

        <TextView
            android:id="@+id/score_field"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/level_field"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time_field"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:textColor="#D40808"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rel2"
        android:layout_marginTop="10dp"
        android:background="#000000"
        android:gravity="center_vertical|center_horizontal" >

        <ImageView
            android:id="@+id/add_imageview"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="3dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/addition_gray" />

        <ImageView
            android:id="@+id/subtract_imageview"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="3dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/subtraction_gray" />

        <ImageView
            android:id="@+id/multiply_imageview"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="3dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/multiplication_gray" />

        <ImageView
            android:id="@+id/divide_imageview"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="3dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/division_gray" />

        <ImageView
            android:id="@+id/mixed_imageview"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/mixed_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="8dp"
        android:background="#000000"
        android:gravity="center_vertical|center_horizontal" >

        <ImageView
            android:id="@+id/dot1_imageview"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/wrong" />

        <ImageView
            android:id="@+id/dot2_imageview"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/wrong" />

        <ImageView
            android:id="@+id/dot3_imageview"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/wrong" />

        <ImageView
            android:id="@+id/dot4_imageview"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/wrong" />

        <ImageView
            android:id="@+id/dot5_imageview"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/wrong" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rel2"
        android:layout_alignRight="@+id/rel2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="13dp" >

        <TextView
            android:id="@+id/first_operand_view"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/operator_view"
            android:background="#000000"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/operator_view"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#aaaaaa"
            android:gravity="center_horizontal|center_vertical"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/second_operand_view"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/operator_view"
            android:background="#000000"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal" >

        <EditText
            android:id="@+id/answer_field"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="#000000"
            android:gravity="center_horizontal|center_vertical"
            android:inputType="number"
            android:textColor="#ffffff" >
        </EditText>

        <ImageButton
            android:id="@+id/submit_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/answer_field"
            android:contentDescription="@string/image_desc"
            android:gravity="center_vertical|center_horizontal"
            android:src="@drawable/go"
            android:textSize="15sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignRight="@+id/relativeLayout1"
        android:layout_below="@+id/relativeLayout2"
        android:gravity="center"
        android:text="@string/tap"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic" />

</RelativeLayout>